// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiqAlertStructuredList should render alert expression structured list 1`] = `
<Accordion
  align="start"
  className="miq-structured-list-accordion miq_alert_expression"
>
  <AccordionItem
    open={true}
    title={"Expression"}
  >
    <FeatureToggle(StructuredListWrapper)
      ariaLabel="Structured list"
      className="miq-structured-list miq_alert_expression"
    >
      <FeatureToggle(StructuredListBody)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="0"
          onClick={[Function]}
          tabIndex={0}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header object_item"
          >
            <div
              className="content"
            >
              <div
                className="expand wrap_text"
              >
                Expression1
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="1"
          onClick={[Function]}
          tabIndex={1}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header object_item"
          >
            <div
              className="content"
            >
              <div
                className="expand wrap_text"
              >
                Expression2
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="2"
          onClick={[Function]}
          tabIndex={2}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header object_item"
          >
            <div
              className="content"
            >
              <div
                className="expand wrap_text"
              >
                Expression3
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
      </FeatureToggle(StructuredListBody)>
    </FeatureToggle(StructuredListWrapper)>
  </AccordionItem>
</Accordion>
`;

exports[`MiqAlertStructuredList should render alert info structured list 1`] = `
<Accordion
  align="start"
  className="miq-structured-list-accordion miq_alert_info"
>
  <AccordionItem
    open={true}
    title={"Info"}
  >
    <FeatureToggle(StructuredListWrapper)
      ariaLabel="Structured list"
      className="miq-structured-list miq_alert_info"
    >
      <FeatureToggle(StructuredListBody)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="0"
          onClick={[Function]}
          tabIndex={0}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="expand wrap_text"
              >
                bar
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="1"
          onClick={[Function]}
          tabIndex={1}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="expand wrap_text"
              >
                Yes
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="2"
          onClick={[Function]}
          tabIndex={2}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="wrap_text"
              />
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="3"
          onClick={[Function]}
          tabIndex={3}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="expand wrap_text"
              >
                Server
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="4"
          onClick={[Function]}
          tabIndex={4}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="expand wrap_text"
              >
                Expression
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="5"
          onClick={[Function]}
          tabIndex={5}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="expand wrap_text"
              >
                What to evaluate
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="6"
          onClick={[Function]}
          tabIndex={6}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="expand wrap_text"
              >
                Hourly
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="7"
          onClick={[Function]}
          tabIndex={7}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="expand wrap_text"
              >
                1 Hour
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
      </FeatureToggle(StructuredListBody)>
    </FeatureToggle(StructuredListWrapper)>
  </AccordionItem>
</Accordion>
`;

exports[`MiqAlertStructuredList should render alert management event structured list 1`] = `
<Accordion
  align="start"
  className="miq-structured-list-accordion miq_alert_management_event"
>
  <AccordionItem
    open={true}
    title={"Send Management Event"}
  >
    <FeatureToggle(StructuredListWrapper)
      ariaLabel="Structured list"
      className="miq-structured-list miq_alert_management_event"
    >
      <FeatureToggle(StructuredListBody)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="0"
          onClick={[Function]}
          tabIndex={0}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="expand wrap_text"
              >
                Event name
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
      </FeatureToggle(StructuredListBody)>
    </FeatureToggle(StructuredListWrapper)>
  </AccordionItem>
</Accordion>
`;

exports[`MiqAlertStructuredList should render alert parameter structured list 1`] = `
<Accordion
  align="start"
  className="miq-structured-list-accordion miq_alert_parameters"
>
  <AccordionItem
    open={true}
    title={"Expression Type Parameters"}
  >
    <FeatureToggle(StructuredListWrapper)
      ariaLabel="Structured list"
      className="miq-structured-list miq_alert_parameters"
    >
      <FeatureToggle(StructuredListBody)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="0"
          onClick={[Function]}
          tabIndex={0}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="expand wrap_text"
              >
                type1 value1
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="1"
          onClick={[Function]}
          tabIndex={1}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="multi_row_cell"
              >
                <div
                  className="sub_row_item"
                  key="0"
                  title=""
                >
                  <div
                    className="sub_value"
                  >
                    <div
                      className="expand wrap_text"
                    >
                      type2 value1
                    </div>
                  </div>
                </div>
                <div
                  className="sub_row_item"
                  key="1"
                  title=""
                >
                  <div
                    className="sub_value"
                  >
                    <div
                      className="expand wrap_text"
                    >
                      type2 value2
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="2"
          onClick={[Function]}
          tabIndex={2}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="expand wrap_text"
              >
                type3 value1
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
      </FeatureToggle(StructuredListBody)>
    </FeatureToggle(StructuredListWrapper)>
  </AccordionItem>
</Accordion>
`;

exports[`MiqAlertStructuredList should render alert profile structured list 1`] = `
<Accordion
  align="start"
  className="miq-structured-list-accordion miq_alert_profiles"
>
  <AccordionItem
    open={true}
    title={"Belongs to Alert Profiles"}
  >
    <FeatureToggle(StructuredListWrapper)
      ariaLabel="Structured list"
      className="miq-structured-list miq_alert_profiles"
    >
      <FeatureToggle(StructuredListBody)>
        <FeatureToggle(StructuredListRow)
          className="clickable"
          key="0"
          onClick={[Function]}
          tabIndex={0}
          title="View this Alert Profile"
        >
          <FeatureToggle(StructuredListCell)
            className="label_header object_item"
          >
            <div
              className="content"
            >
              <div
                className="wrap_text"
              />
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className="clickable"
          key="1"
          onClick={[Function]}
          tabIndex={1}
          title="View this Alert Profile"
        >
          <FeatureToggle(StructuredListCell)
            className="label_header object_item"
          >
            <div
              className="content"
            >
              <div
                className="wrap_text"
              />
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className="clickable"
          key="2"
          onClick={[Function]}
          tabIndex={2}
          title="View this Alert Profile"
        >
          <FeatureToggle(StructuredListCell)
            className="label_header object_item"
          >
            <div
              className="content"
            >
              <div
                className="wrap_text"
              />
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
      </FeatureToggle(StructuredListBody)>
    </FeatureToggle(StructuredListWrapper)>
  </AccordionItem>
</Accordion>
`;

exports[`MiqAlertStructuredList should render alert referenced structured list 1`] = `
<Accordion
  align="start"
  className="miq-structured-list-accordion miq_alert_referenced"
>
  <AccordionItem
    open={true}
    title={"Referenced by Actions"}
  >
    <FeatureToggle(StructuredListWrapper)
      ariaLabel="Structured list"
      className="miq-structured-list miq_alert_referenced"
    >
      <FeatureToggle(StructuredListBody)>
        <FeatureToggle(StructuredListRow)
          className="clickable"
          key="0"
          onClick={[Function]}
          tabIndex={0}
          title="View this Action"
        >
          <FeatureToggle(StructuredListCell)
            className="label_header object_item"
          >
            <div
              className="content"
            >
              <div
                className="wrap_text"
              />
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className="clickable"
          key="1"
          onClick={[Function]}
          tabIndex={1}
          title="View this Action"
        >
          <FeatureToggle(StructuredListCell)
            className="label_header object_item"
          >
            <div
              className="content"
            >
              <div
                className="wrap_text"
              />
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className="clickable"
          key="2"
          onClick={[Function]}
          tabIndex={2}
          title="View this Action"
        >
          <FeatureToggle(StructuredListCell)
            className="label_header object_item"
          >
            <div
              className="content"
            >
              <div
                className="wrap_text"
              />
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
      </FeatureToggle(StructuredListBody)>
    </FeatureToggle(StructuredListWrapper)>
  </AccordionItem>
</Accordion>
`;

exports[`MiqAlertStructuredList should render alert sms structured list 1`] = `
<Accordion
  align="start"
  className="miq-structured-list-accordion miq_alert_send_sms"
>
  <AccordionItem
    open={true}
    title={"Send SNMP Trap"}
  >
    <FeatureToggle(StructuredListWrapper)
      ariaLabel="Structured list"
      className="miq-structured-list miq_alert_send_sms"
    >
      <FeatureToggle(StructuredListBody)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="0"
          onClick={[Function]}
          tabIndex={0}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="multi_row_cell"
              >
                <div
                  className="sub_row_item"
                  key="0"
                  title=""
                >
                  <div
                    className="sub_value"
                  >
                    <div
                      className="expand wrap_text"
                    >
                      value1
                    </div>
                  </div>
                </div>
                <div
                  className="sub_row_item"
                  key="1"
                  title=""
                >
                  <div
                    className="sub_value"
                  >
                    <div
                      className="expand wrap_text"
                    >
                      value2
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="1"
          onClick={[Function]}
          tabIndex={1}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="multi_row_cell"
              >
                <div
                  className="sub_row_item"
                  key="0"
                  title=""
                >
                  <div
                    className="sub_value"
                  >
                    <div
                      className="expand wrap_text"
                    >
                      value1
                    </div>
                  </div>
                </div>
                <div
                  className="sub_row_item"
                  key="1"
                  title=""
                >
                  <div
                    className="sub_value"
                  >
                    <div
                      className="expand wrap_text"
                    >
                      value2
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="2"
          onClick={[Function]}
          tabIndex={2}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="expand wrap_text"
              >
                123
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
      </FeatureToggle(StructuredListBody)>
    </FeatureToggle(StructuredListWrapper)>
  </AccordionItem>
</Accordion>
`;

exports[`MiqAlertStructuredList should render alert timeline event structured list 1`] = `
<Accordion
  align="start"
  className="miq-structured-list-accordion miq_alert_timeline_event"
>
  <AccordionItem
    open={true}
    title={"Timeline Event"}
  >
    <FeatureToggle(StructuredListWrapper)
      ariaLabel="Structured list"
      className="miq-structured-list miq_alert_timeline_event"
    >
      <FeatureToggle(StructuredListBody)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="0"
          onClick={[Function]}
          tabIndex={0}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="label_header"
          />
          <FeatureToggle(StructuredListCell)
            className="content_value object_item"
          >
            <div
              className="content"
            >
              <div
                className="expand wrap_text"
              >
                True
              </div>
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
      </FeatureToggle(StructuredListBody)>
    </FeatureToggle(StructuredListWrapper)>
  </AccordionItem>
</Accordion>
`;

exports[`MiqAlertStructuredList should render alert variable structured list 1`] = `
<Accordion
  align="start"
  className="miq-structured-list-accordion miq_alert_variable"
>
  <AccordionItem
    open={true}
    title={"Variables"}
  >
    <FeatureToggle(StructuredListWrapper)
      ariaLabel="Structured list"
      className="miq-structured-list miq_alert_variable"
    >
      <FeatureToggle(StructuredListBody)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="0"
          onClick={[Function]}
          tabIndex={0}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="content_value array_item"
            key="0"
            onClick={[Function]}
            title=""
          >
            <div
              className="expand wrap_text"
            >
              object_id
            </div>
          </FeatureToggle(StructuredListCell)>
          <FeatureToggle(StructuredListCell)
            className="content_value array_item"
            key="1"
            onClick={[Function]}
            title=""
          >
            <div
              className="expand wrap_text"
            >
              type
            </div>
          </FeatureToggle(StructuredListCell)>
          <FeatureToggle(StructuredListCell)
            className="content_value array_item"
            key="2"
            onClick={[Function]}
            title=""
          >
            <div
              className="expand wrap_text"
            >
              value
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="1"
          onClick={[Function]}
          tabIndex={1}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="content_value array_item"
            key="0"
            onClick={[Function]}
            title=""
          >
            <div
              className="expand wrap_text"
            >
              object_id
            </div>
          </FeatureToggle(StructuredListCell)>
          <FeatureToggle(StructuredListCell)
            className="content_value array_item"
            key="1"
            onClick={[Function]}
            title=""
          >
            <div
              className="expand wrap_text"
            >
              type
            </div>
          </FeatureToggle(StructuredListCell)>
          <FeatureToggle(StructuredListCell)
            className="content_value array_item"
            key="2"
            onClick={[Function]}
            title=""
          >
            <div
              className="expand wrap_text"
            >
              value
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
        <FeatureToggle(StructuredListRow)
          className=""
          key="2"
          onClick={[Function]}
          tabIndex={2}
          title=""
        >
          <FeatureToggle(StructuredListCell)
            className="content_value array_item"
            key="0"
            onClick={[Function]}
            title=""
          >
            <div
              className="expand wrap_text"
            >
              object_id
            </div>
          </FeatureToggle(StructuredListCell)>
          <FeatureToggle(StructuredListCell)
            className="content_value array_item"
            key="1"
            onClick={[Function]}
            title=""
          >
            <div
              className="expand wrap_text"
            >
              type
            </div>
          </FeatureToggle(StructuredListCell)>
          <FeatureToggle(StructuredListCell)
            className="content_value array_item"
            key="2"
            onClick={[Function]}
            title=""
          >
            <div
              className="expand wrap_text"
            >
              value
            </div>
          </FeatureToggle(StructuredListCell)>
        </FeatureToggle(StructuredListRow)>
      </FeatureToggle(StructuredListBody)>
    </FeatureToggle(StructuredListWrapper)>
  </AccordionItem>
</Accordion>
`;
